# Osmosis

./: Cargo.toml
src/: main.rs
src/modules/: amazon.rs  instagram.rs  mod.rs
