[package]
name = "osmosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
reqwest = "0.11"
crypto = "0.5"
hmac = "0.12"
url = "2.5"
hex = "0.4"
sha2 = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"